discussion/kv_engine/176116/176116_rev29_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52580: Remove keyIndexKeyAllocator stats

Remove all public references to keyIndexKeyAllocator as there is no
equivalent for the manually tracked stats.
The allocator itself is still kept due to Allocator type difficulties
integrating keyIndexKeyAllocator into keyIndexAllocator, but its value
is now only available as part of keyIndexAllocator's total.

Convert the test "keyIndexAllocatorsAreDisjoint" to
"keyIndexAllocatorAccountsForKey" to test the new behaviour.

Change-Id: Ic4a27ec8000e12c9edf609d0df0b990e118cc984

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-07-08 11:50:54.000000000
Message: 
Uploaded patch set 29.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-08 12:06:57.000000000
Message: 
Patch Set 29: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47689/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47689/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18876/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3883:26: error: use of undeclared identifier "longKeyLength" [clang-diagnostic-error]
    const auto keySize = longKeyLength;
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18876/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3883:26:
error: use of undeclared identifier "longKeyLength" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18876/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8559/ : FAILURE

Compile error at [2022-07-08T11:55:57.558Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3883:26:
error: use of undeclared identifier "longKeyLength"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8559/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20775/ : FAILURE

Compile error at [2022-07-08T12:03:29.712Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3883:26:
error: ?longKeyLength? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20775/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21822/ : FAILURE

Compile error at [2022-07-08T12:05:48.391Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3883:26:
error: use of undeclared identifier "longKeyLength"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21822/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20017/ : FAILURE

Compile error at [2022-07-08T12:05:25.739Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3883:26:
error: use of undeclared identifier "longKeyLength"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20017/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8656/ : FAILURE

Compile error at [2022-07-08T11:56:55.596Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3883:26:
error: ?longKeyLength? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8656/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29174/ : FAILURE

Compile error at [2022-07-08T12:06:21.220Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3883:26:
error: use of undeclared identifier "longKeyLength"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29174/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21134/ : FAILURE

Compile error at [2022-07-08T12:03:52.680Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3883:26:
error: ?longKeyLength? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21134/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18033/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40060/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
